--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "solc": "^0.4.25"
+    "ganache-cli": "^6.4.4",
+    "mocha": "^6.1.4",
+    "solc": "^0.4.25",
+    "web3": "^1.0.0-beta.26"
   }
 }
