--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "compile.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +12,6 @@
     "ganache-cli": "^6.4.4",
     "mocha": "^6.1.4",
     "solc": "^0.4.25",
-    "web3": "^1.0.0-beta.26"
+    "web3": "^1.0.0-beta.37"
   }
 }
